fix package jsons and update root README

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "topupIdentity": "node scripts/topupIdentity",
     "registerName": "node scripts/registerName",
     "retrieveName": "node scripts/retrieveName",
-    "serve": "node api/server"
+    "serve": "node api/express/server"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.0.0",
