--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 NETWORK="testnet"
-WALLET_ADDRESS=""
-MNEMONIC=""
-SERVER_URL=""
+WALLET_ADDRESS=
+MNEMONIC=
+SERVER_URL=
+LABEL=
+DASH_NAME=
+CONTRACT_ID=
