--- a/package.json
+++ b/package.json
@@ -17,13 +17,20 @@
     "topupIdentity": "node scripts/topupIdentity",
     "registerName": "node scripts/registerName",
     "retrieveName": "node scripts/retrieveName",
+    "registerContract": "node scripts/registerContract",
+    "retrieveContract": "node scripts/retrieveContract",
+    "updateContract": "node scripts/updateContract",
+    "submitNoteDocument": "node scripts/submitNoteDocument",
+    "getDocuments": "node scripts/getDocuments",
+    "updateNoteDocument": "node scripts/updateNoteDocument",
+    "deleteNoteDocument": "node scripts/deleteNoteDocument",
     "serve": "node api/express/server"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.0.0",
     "cors": "^2.8.5",
     "dash": "^3.24.4",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "netlify-cli": "^15.1.1",
     "npm-run-all": "^4.1.5",
