--- a/angular/package.json
+++ b/angular/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ng serve",
     "ng": "ng",
-    "start": "pnpm run dev",
+    "start": "npm run dev",
     "build": "ng build",
     "watch": "ng build --watch",
     "test": "ng test"
