--- a/package.json
+++ b/package.json
@@ -6,23 +6,24 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "getBlockMethods": "node scripts/getBlockMethods",
-    "createWallet": "node scripts/createWallet",
-    "createIdentity": "node scripts/createIdentity",
-    "retrieveIdentity": "node scripts/retrieveIdentity",
-    "retrieveIdentityIds": "node scripts/retrieveIdentityIds",
-    "updateIdentityDisableKey": "node scripts/updateIdentityDisableKey",
-    "topupIdentity": "node scripts/topupIdentity",
-    "registerName": "node scripts/registerName",
-    "retrieveName": "node scripts/retrieveName",
-    "registerContract": "node scripts/registerContract",
-    "retrieveContract": "node scripts/retrieveContract",
-    "updateContract": "node scripts/updateContract",
-    "submitNoteDocument": "node scripts/submitNoteDocument",
-    "getDocuments": "node scripts/getDocuments",
-    "updateNoteDocument": "node scripts/updateNoteDocument",
-    "deleteNoteDocument": "node scripts/deleteNoteDocument",
-    "serve": "node api/express/server"
+    "getBlockMethods": "node --env-file=.env scripts/getBlockMethods",
+    "createFirstWallet": "node --env-file=.env scripts/createFirstWallet",
+    "createWallet": "node --env-file=.env scripts/createWallet",
+    "createIdentity": "node --env-file=.env scripts/createIdentity",
+    "retrieveIdentity": "node --env-file=.env scripts/retrieveIdentity",
+    "retrieveIdentityIds": "node --env-file=.env scripts/retrieveIdentityIds",
+    "updateIdentityDisableKey": "node --env-file=.env scripts/updateIdentityDisableKey",
+    "topupIdentity": "node --env-file=.env scripts/topupIdentity",
+    "registerName": "node --env-file=.env scripts/registerName",
+    "retrieveName": "node --env-file=.env scripts/retrieveName",
+    "registerContract": "node --env-file=.env scripts/registerContract",
+    "retrieveContract": "node --env-file=.env scripts/retrieveContract",
+    "updateContract": "node --env-file=.env scripts/updateContract",
+    "submitNoteDocument": "node --env-file=.env scripts/submitNoteDocument",
+    "getDocuments": "node --env-file=.env scripts/getDocuments",
+    "updateNoteDocument": "node --env-file=.env scripts/updateNoteDocument",
+    "deleteNoteDocument": "node --env-file=.env scripts/deleteNoteDocument",
+    "serve": "node --env-file=.env --watch api/express/server"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.0.0",
