all scripts working plus async refactor

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 NETWORK="testnet"
 WALLET_ADDRESS=
 MNEMONIC=
-SERVER_URL=
+IDENTITY_ID=
 LABEL=
-DASH_NAME=
 CONTRACT_ID=
+DOCUMENT_ID=
+SERVER_URL=
