remove vue and update image urls

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ajcwebdev-dash",
+  "name": "dash-examples",
   "description": "An example application using the Dash JavaScript SDK",
   "keywords": [ "Dash", "JavaScript" ],
   "author": "Anthony Campolo",
